Fix login nav on mobile

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -38,6 +38,24 @@
   }
 }
 
+.login-hide-large {
+  .parent-link {
+    display: none !important;
+  }
+}
+
+@media only screen and (min-width: 640px) {
+  .login-hide-large {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .login-hide-small {
+    display: none;
+  }
+}
+
 .social-login {
   height: 25px;
   
